--- a/data_analysis/tag_clustering.ipynb
+++ b/data_analysis/tag_clustering.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>\"Glow Ball\" - The billiard puzzle game</th>\n",
+       "      <th>//N.P.P.D. RUSH//- The milk of Ultraviolet</th>\n",
+       "      <th>0RBITALIS</th>\n",
+       "      <th>1... 2... 3... KICK IT! (Drop That Beat Like an Ugly Baby)</th>\n",
+       "      <th>10 Second Ninja</th>\n",
+       "      <th>10 Years After</th>\n",
+       "      <th>10,000,000</th>\n",
+       "      <th>100% Orange Juice</th>\n",
+       "      <th>1000 Amps</th>\n",
+       "      <th>1001 Spikes</th>\n",
+       "      <th>...</th>\n",
+       "      <th>realMyst: Masterpiece Edition</th>\n",
+       "      <th>resident evil 4 / biohazard 4</th>\n",
+       "      <th>rymdkapsel</th>\n",
+       "      <th>sZone-Online</th>\n",
+       "      <th>samurai_jazz</th>\n",
+       "      <th>stratO</th>\n",
+       "      <th>the static speaks my name</th>\n",
+       "      <th>theHunter: Primal</th>\n",
+       "      <th>ルナティックドーン 前途への道標</th>\n",
+       "      <th>栄冠は君に レジェンドパック</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1980s</th>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td>...</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990's</th>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td>...</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.5D</th>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td>...</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2D</th>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td>...</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2D Fighter</th>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td>...</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 4350 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            \"Glow Ball\" - The billiard puzzle game  \\\n",
+       "1980s                                            0   \n",
+       "1990's                                           0   \n",
+       "2.5D                                             0   \n",
+       "2D                                               0   \n",
+       "2D Fighter                                       0   \n",
+       "\n",
+       "            //N.P.P.D. RUSH//- The milk of Ultraviolet  0RBITALIS  \\\n",
+       "1980s                                                0          0   \n",
+       "1990's                                               0          0   \n",
+       "2.5D                                                 0          0   \n",
+       "2D                                                   0          0   \n",
+       "2D Fighter                                           0          0   \n",
+       "\n",
+       "            1... 2... 3... KICK IT! (Drop That Beat Like an Ugly Baby)  \\\n",
+       "1980s                                                       0            \n",
+       "1990's                                                      0            \n",
+       "2.5D                                                        0            \n",
+       "2D                                                          0            \n",
+       "2D Fighter                                                  0            \n",
+       "\n",
+       "            10 Second Ninja  10 Years After  10,000,000  100% Orange Juice  \\\n",
+       "1980s                     0               0           0                  0   \n",
+       "1990's                    0               0           0                  0   \n",
+       "2.5D                      0               0           0                  0   \n",
+       "2D                        0               0           0                  0   \n",
+       "2D Fighter                0               0           0                  0   \n",
+       "\n",
+       "            1000 Amps  1001 Spikes       ...        \\\n",
+       "1980s               0            0       ...         \n",
+       "1990's              0            0       ...         \n",
+       "2.5D                0            0       ...         \n",
+       "2D                  0            0       ...         \n",
+       "2D Fighter          0            0       ...         \n",
+       "\n",
+       "            realMyst: Masterpiece Edition  resident evil 4 / biohazard 4  \\\n",
+       "1980s                                   0                              0   \n",
+       "1990's                                  0                              0   \n",
+       "2.5D                                    0                              0   \n",
+       "2D                                      0                              0   \n",
+       "2D Fighter                              0                              0   \n",
+       "\n",
+       "            rymdkapsel  sZone-Online  samurai_jazz  stratO  \\\n",
+       "1980s                0             0             0       0   \n",
+       "1990's               0             0             0       0   \n",
+       "2.5D                 0             0             0       0   \n",
+       "2D                   0             0             0       0   \n",
+       "2D Fighter           0             0             0       0   \n",
+       "\n",
+       "            the static speaks my name  theHunter: Primal  ルナティックドーン 前途への道標  \\\n",
+       "1980s                               0                  0                 0   \n",
+       "1990's                              0                  0                 0   \n",
+       "2.5D                                0                  0                 0   \n",
+       "2D                                  0                  0                 0   \n",
+       "2D Fighter                          0                  0                 0   \n",
+       "\n",
+       "            栄冠は君に レジェンドパック  \n",
+       "1980s                    0  \n",
+       "1990's                   0  \n",
+       "2.5D                     0  \n",
+       "2D                       0  \n",
+       "2D Fighter               0  \n",
+       "\n",
+       "[5 rows x 4350 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -52,19 +292,19 @@
        "    verbose=0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "k_means = KMeans(n_clusters=5, n_init=1)\n",
-    "k_means.fit(tag_mat)"
+    "k_means.fit(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +337,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#look at \"tsnee\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -108,34 +359,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int32)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int32)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pp(labels)"
+    "labels"
    ]
   },
   {
