--- a/data_collection/setup_sql.ipynb
+++ b/data_collection/setup_sql.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Not really a sql setup anymore anymore. Need to change name in the repo <br> More like scrape steamdb</h4>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -5995,6 +6002,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
