got flask-graph-db functionality to work. Next step: fix conversion of prices

--- a/data_analysis/convert_steamdb_timeseries.ipynb
+++ b/data_analysis/convert_steamdb_timeseries.ipynb
@@ -6655,6 +6655,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "samp = df['plot_info'].iloc[16]\n",
     "def make_plot(plot_dict):\n",
     "    x = plot_dict['timestamps']\n",
@@ -6666,6 +6668,17 @@
     "    plt.ylabel('$Price')\n",
     "    return fig\n",
     "fig = make_plot(samp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "'''more testing'''\n"
    ]
   },
   {
