created boolean list of whether or not a sale occured in a specific time period

--- a/data_analysis/clean_steamdb_data.ipynb
+++ b/data_analysis/clean_steamdb_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
        "'/home/ryan/Documents/insight_projects/steam_prices/data_analysis'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "list_dict  = {'appid':list(),'fprice':list(),'iprice':list(), 'price_date':list()}\n",
+    "list_dict  = {'appid':list(),'fprice':list(),'iprice':list(), 'price_date':list(), 'formatted':list()}\n",
     "for f in steamdb_fnames:\n",
     "    appid = int(f.split('.')[0].split('_')[1])\n",
     "    cur_file = os.path.join(steamdb_path,f)\n",
@@ -61,8 +61,9 @@
     "        json_data = json.load(json_file)\n",
     "    cur_init = np.array(dict(json_data)[u'data'][ u'initial'])\n",
     "    cur_final = np.array(dict(json_data)[u'data'][ u'final'])\n",
+    "    cur_formatted = dict(json_data)[u'data'][u'formatted']\n",
     "    if cur_final.size > 0:\n",
-    "        cur_date = cur_init[:,0]\n",
+    "        cur_date = cur_init[:,0] * pow(10,-3)\n",
     "        cur_init_just = cur_init[:,1]\n",
     "        cur_final_just = cur_final[:,1]\n",
     "    else:\n",
@@ -72,7 +73,8 @@
     "    list_dict['appid'].append(appid)\n",
     "    list_dict['price_date'].append(cur_date)\n",
     "    list_dict['iprice'].append(cur_init_just)\n",
-    "    list_dict['fprice'].append(cur_final_just)"
+    "    list_dict['fprice'].append(cur_final_just)\n",
+    "    list_dict['formatted'].append(cur_formatted) #used the formatted data to make an the array"
    ]
   },
   {
@@ -83,7 +85,273 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(list_dict)"
+    "df = pd.DataFrame(list_dict)\n",
+    "df = df.fillna(value=np.nan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<H4>TIME SERIES FOR PLOTTING ONLY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "'''needs to be converted from a sample occurence to a plot (to do later)'''\n",
+    "sample = 2\n",
+    "dt = list_dict['price_date'][sample]\n",
+    "form_price = list_dict['formatted'][1]\n",
+    "min_timestamp = 1417120656\n",
+    "max_timestamp = 1442077561\n",
+    "\n",
+    "obs_per_week = 4.0\n",
+    "week_sec = 7 * 24 * 60 * 60\n",
+    "step = week_sec / obs_per_week\n",
+    "timestamp_range = np.arange(min_timestamp,max_timestamp,step)\n",
+    "\n",
+    "price_val = ['']*timestamp_range.size\n",
+    "#price_val[:] = np.nan\n",
+    "\n",
+    "price_dates = [int(int(k) * pow(10,-3)) for k,v in form_price.iteritems()]\n",
+    "\n",
+    "\n",
+    "for item in price_dates:\n",
+    "    time_delta =  np.abs(item - timestamp_range)\n",
+    "    min_dif = np.argmin(time_delta)\n",
+    "    if min_dif.size == 1:\n",
+    "        dif_ix = int(min_dif)\n",
+    "    else:\n",
+    "        dif_ix = int(min_dif[0])\n",
+    "    price_val[dif_ix] = form_price[str(int(item * pow(10,3)))]\n",
+    "\n",
+    "price_adjusted = price_val\n",
+    "\n",
+    "for ix,val in enumerate(price_val):\n",
+    "    #print 'ix:'+ str(ix)\n",
+    "    #print 'val:'+ str(val)\n",
+    "    #print 'pa:' + str(price_adjusted[ix])\n",
+    "    if ix < len(price_val)-2:\n",
+    "        if price_adjusted[ix+1] == '' and price_adjusted[ix]['discount'] == 0:\n",
+    "            #print('trigger')\n",
+    "            price_adjusted[ix+1] = price_adjusted[ix]\n",
+    "        elif price_adjusted[ix+1] == '' and not price_adjusted[ix]['discount'] == 0:\n",
+    "            price_adjusted[ix+1] = price_adjusted[ix]\n",
+    "            price_adjusted[ix+1]['final'] = price_adjusted[ix+1]['initial']\n",
+    "            \n",
+    "    elif ix == len(price_val)-2:\n",
+    "        price_adjusted[ix+1] == price_adjusted[ix] #This will need to be adjusted, but \n",
+    "price_adjusted[-1] = price_adjusted[-2] #not 100% right, but good for most cases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>SALES EVENTS TO BINARY - SALE OR NOT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "'''to be turned into a function'''\n",
+    "sample = 2\n",
+    "dt = list_dict['price_date'][sample]\n",
+    "form_price = list_dict['formatted'][1]\n",
+    "\n",
+    "discount_dates= [int(int(k)*pow(10,-3)) for k,v in form_price.iteritems() if v['discount'] > 0] \n",
+    "#just extract the times of a discount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "'''create the binary list'''\n",
+    "bstep = week_sec * 2 #currently this is looking at a resolution of once every two weeks\n",
+    "binary_timestamp_range = np.arange(min_timestamp,max_timestamp,bstep)\n",
+    "sale_occur = [0]*binary_timestamp_range.size\n",
+    "\n",
+    "for item in discount_dates:\n",
+    "    time_delta =  np.abs(item - binary_timestamp_range)\n",
+    "    min_dif = np.argmin(time_delta)\n",
+    "    if min_dif.size == 1:\n",
+    "        dif_ix = int(min_dif)\n",
+    "    else:\n",
+    "        dif_ix = int(min_dif[0])\n",
+    "    sale_occur[dif_ix] =  1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'1417120656000': {u'discount': 0,\n",
+       "  u'final': u'$39.99',\n",
+       "  u'initial': u'$39.99'},\n",
+       " u'1434047268000': {u'discount': 25,\n",
+       "  u'final': u'$39.99',\n",
+       "  u'initial': u'$39.99'},\n",
+       " u'1434994431000': {u'discount': 0,\n",
+       "  u'final': u'$39.99',\n",
+       "  u'initial': u'$39.99'},\n",
+       " u'1440176720000': {u'discount': 50,\n",
+       "  u'final': u'$39.99',\n",
+       "  u'initial': u'$39.99'},\n",
+       " u'1440522322000': {u'discount': 0,\n",
+       "  u'final': u'$39.99',\n",
+       "  u'initial': u'$39.99'}}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'discount': 0, u'final': u'$39.99', u'initial': u'$39.99'}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "form_price[str(int(v))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "pdfi: price_dates (in timestamps)\n",
+    "ipi: initial prices\n",
+    "fpi: final prices\n",
+    "\n",
+    "make sure to input with the fixed time stamps\n",
+    "'''\n",
+    "#pdfi = df.price_date_fixed.iloc[samp]\n",
+    "#ipi = np.array(df.iprice.iloc[samp])\n",
+    "#fpi = np.array(df.fprice.iloc[samp])\n",
+    "#dt = np.append(np.array(pdfi),(np.array(pdfi) + day_sec/10))\n",
+    "dt = np.array(pdfi)\n",
+    "price = np.append(ipi,fpi)\n",
+    "price_type = ['i'] * ipi.size + ['f'] * fpi.size\n",
+    "\n",
+    "#df_dp = pd.DataFrame({'price':price,'timestamp':dt, 'price_type':price_type}).sort(['timestamp'])\n",
+    "\n",
+    "week_sec = 7 * 24 * 60 * 60\n",
+    "#day_sec = 24 * 60 * 60\n",
+    "timestamp_range = np.arange(min_timestamp,max_timestamp,week_sec / 2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "price_val = np.empty(timestamp_range.size)\n",
+    "price_val[:] = np.nan\n",
+    "\n",
+    "\n",
+    "for i,v in np.ndenumerate(dt):#make sure s_ts is a 1-D numpy array\n",
+    "    time_delta =  np.abs(v - timestamp_range)\n",
+    "    min_dif = np.argmin(time_delta)\n",
+    "    if min_dif.size == 1:\n",
+    "        dif_ix = int(min_dif)\n",
+    "    else:\n",
+    "        dif_ix = int(min_dif[0])\n",
+    "    price_val[dif_ix] = ipi[i]\n",
+    "    if not dif_ix + 1 > fpi.size:\n",
+    "        price_val[dif_ix + 1] = fpi[i]\n",
+    "\n",
+    "\n",
+    "\n",
+    "price_val_reverse = copy.deepcopy(price_val[::-1])\n",
+    "price_val_reverse2 = price_val_reverse #for inputting new values into during iteration\n",
+    "for i,v in np.ndenumerate(price_val_reverse):\n",
+    "    if i[0] > 0 and np.isnan(v):\n",
+    "        price_val_reverse2[i[0]] = price_val_reverse2[i[0]-1]\n",
+    "\n",
+    "'''fill in trailing nans'''\n",
+    "price_val2 = price_val_reverse2[::-1]\n",
+    "price_val3 = copy.deepcopy(price_val2)\n",
+    "for i,v in np.ndenumerate(price_val3):\n",
+    "    if i[0] > 1 and np.isnan(v):\n",
+    "        price_val3[i[0]] = np.median(price_val3[:i[0]-1]) # this will need to be fixed! \n",
+    "        #Currently only doing medians\n",
+    "\n",
+    "out_dict = {'timestamps':list(timestamp_range), 'prices':list(price_val3)}\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -94,6 +362,7 @@
    },
    "outputs": [],
    "source": [
+    "'''not used now'''\n",
     "def make_descend(np_array):\n",
     "    if np_array != None:\n",
     "        new = np_array\n",
@@ -114,6 +383,7 @@
    },
    "outputs": [],
    "source": [
+    "'''not used now'''\n",
     "min_iprice = list()\n",
     "min_fprice = list()\n",
     "for item in df.iprice:\n",
@@ -145,7 +415,7 @@
    },
    "outputs": [],
    "source": [
-    "df = df.fillna(value=np.nan)\n"
+    "\n"
    ]
   },
   {
@@ -388,6 +658,15 @@
    "source": [
     "df.to_pickle('df_steam_db.pkl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
