--- a/data_analysis/convert_steamdb_timeseries.ipynb
+++ b/data_analysis/convert_steamdb_timeseries.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -26,7 +26,7 @@
        "'/home/ryan/Documents/insight_projects/steam_prices/data_analysis'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +205,7 @@
        "4  [1430513702.0, 1431104712.0, 1434045990.0, 143...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -372,13 +372,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "df['plot_info'] =out_dict_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "'''For testing, remove later. DONT RERUN'''\n",
+    "# a = df.loc[df['appid'] == 105600].plot_info\n",
+    "# b= a.iloc[0]['prices']\n",
+    "# b[40] = 1.99\n",
+    "# b[63] = 1.99\n",
+    "# b[77] = 1.99\n",
+    "\n",
+    "# pw_path =  '/home/ryan/credentials/'\n",
+    "# with open(os.path.join(pw_path, 'mysql_pw.txt')) as f:\n",
+    "#     pw = f.read().strip('\\n')\n",
+    "\n",
+    "# y = b\n",
+    "    \n",
+    "# db = mdb.connect(user=\"root\", host=\"localhost\", passwd=pw, db=\"gamepricepred\", charset='utf8')\n",
+    "# with db:\n",
+    "#     cur = db.cursor()\n",
+    "#     #str_x= '\"' + str(x) + '\"'\n",
+    "#     str_y= '\"' + str(y) + '\"'\n",
+    "#     #cur.execute(\"UPDATE Games SET plot_x = %s WHERE Appid='%s';\" % (str_x,row.appid))\n",
+    "#     cur.execute(\"UPDATE Games SET plot_y = %s WHERE Appid='%s';\" % (str_y,105600))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df.plot_info.iloc[2]['prices'])"
    ]
   },
   {
