Cleaned up pipeline a bit

--- a/data_analysis/make_time_series_features.ipynb
+++ b/data_analysis/make_time_series_features.ipynb
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -546,8 +546,10 @@
     "    int_i is because i in the iterator is actually a tuple\n",
     "    '''\n",
     "    min_timestamp = 1417120656\n",
+    "    \n",
+    "    if saledates == []:\n",
+    "        saledates = [min_timestamp - (60*60*24*100)] #just assume the last sale was a long time ago, 100 days\n",
     "    saledates = np.sort(saledates)\n",
-    "\n",
     "    time_since_sale = [''] * len(bin_date)\n",
     "    for i,bd in np.ndenumerate(bin_date):\n",
     "        saledates_and = np.append(np.array([min_timestamp]),saledates)\n",
@@ -560,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -577,7 +579,7 @@
     "        bd_in = bd[0]  #index 0 are the dates, index 1 is the boolean\n",
     "        btss = bin_time_since_sale(sd,bd_in)\n",
     "    else:\n",
-    "        btss = []\n",
+    "        btss = [] #if there are no bin dates, the time since sale should be the entire epoch\n",
     "    since_sale_list.append(btss)\n",
     "df['since_sale_lists'] = since_sale_list\n",
     "#pp(btss)\n",
@@ -633,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
